# polydelve

./: .gitignore  Makefile  README.md  mkdocs.yml
auth0/: tenant.yaml
backend/: .dockerignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_test_ping_table.py  0002_full_schema.py  0003_pgvector_embeddings.py  0004_halfvec_embeddings.py
backend/api/: auth.py  cache.py
backend/api/middleware/: cors.py
backend/api/routes/: auth_guest.py  contracts.py  featured.py  packages.py  prediction_market.py  users.py
backend/archive/: seed_top_packages.py
backend/docs/: index.md  seed-timings.md
backend/docs/architecture/: database.md  overview.md  pipeline.md
backend/docs/backend/: scripts.md
backend/docs/dev/: make.md
backend/docs/stylesheets/: extra.css
backend/etl/: run.py  utils.py
backend/etl/fetch/: cve.py  embedding.py  enrichment.py  epss.py  mal.py  news.py  sectors.py
backend/etl/jobs/: epss.py  mal.py  news.py  packages.py
backend/features/: contract_pricing.py  contracts_repo.py  cve_downloads.py  cve_history.py  db.py  featured_contracts.py  featured_repo.py  markets_repo.py  news_repository.py  package_enrichment.py  package_sectors.py  packages_repo.py  prediction_market.py  probability.py  recent_news.py  users_repo.py
backend/models/: models.py
backend/scripts/: build_cve_history.py  classify_package_sectors_llm.py  enrich_package_sectors.py  enrich_packages.py  export_schema_excel.py  ingest_epss_history.py  ingest_mal_advisories.py  news_update.py  push_to_motherduck.py  refresh_downloads.py  refresh_epss.py  resolve_contracts.py  seed_fake_users.py  seed_top_packages.py
backend/tests/: conftest.py  test_api_contracts.py  test_api_guest.py  test_api_packages.py  test_api_prediction_market.py  test_api_users.py  test_contract_pricing.py  test_db_init.py  test_health.py  test_models.py  test_prediction_market.py  test_resolve_contracts.py  test_schema_drift.py
diagrams/: data-layer.drawio  read-path.drawio  seed-pipeline.drawio
docs/: .gitignore  REORG-POV.md  (+7 more)
(+146 files in other folders)
