[project]
name = "action-odds-backend"
version = "0.1.0"
description = "Backend for Polydelve — a prediction market platform for software security events"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.3",
    "httpx>=0.27.0",
    "exa-py>=1.0.0",
    "google-genai>=1.0.0",
    "google-auth>=2.0.0",
    "fastapi>=0.115.0",
    "openai>=1.0.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.34.0",
]

[project.scripts]
dev = "main:dev"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
schema-export = [
    "openpyxl>=3.1.0",
    "pytz>=2026.2",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
