[project]
name = "polydelve-backend"
version = "0.1.0"
description = "Backend for Polydelve — a prediction market platform for software security events"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.3",
    "httpx>=0.27.0",
    "exa-py>=1.0.0",
    "google-genai>=1.0.0",
    "google-auth>=2.0.0",
    "fastapi>=0.115.0",
    "openai>=1.0.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.34.0",
    "cvss>=3.6",
    "tqdm>=4.67.3",
    "google-cloud-bigquery>=3.41.0",
    "auth0-fastapi-api>=1.0.0b7",
    "pytz>=2026.2",
    "slowapi>=0.1.9",
    "boto3>=1.38.0",
    "botocore[crt]>=1.38.0",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.12",
]

[project.scripts]
dev = "main:dev"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "types-tqdm>=4.67.3.20260518",
]
schema-export = [
    "openpyxl>=3.1.0",
    "pytz>=2026.2",
]

[tool.ruff]
exclude = ["scripts/export_schema_excel.py"]

[tool.ruff.lint]
ignore = ["E501"]
